--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
       </div>
       <div class="art">
-        <img src="images/bci-hero.jpg" alt="Neon brain illustration">
+        <img src="bci-hero.jpg" alt="Neon brain illustration">
       </div>
     </section>
 
