--- a/recommendations.html
+++ b/recommendations.html
@@ -44,8 +44,8 @@
     </section>
 
     <div class="footer">
-      <img src="images/bci-clinic.jpg" alt="Clinical BCI image" style="max-width:260px;border-radius:10px;margin-bottom:8px;">
-      <div style="color:var(--muted);">Prepared for IT & Society — Mohamed Taha</div>
+      <img src="bci-clinic.jpg" alt="Clinical BCI image" style="max-width:260px;border-radius:10px;margin-bottom:8px;">
+      <div style="color:var(--muted);">Prepared by — Mohamed Taha, Dre Miller, Tyler Thai, John Zhou</div>
     </div>
   </main>
 </body>
