--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
     </section>
 
-    <div class="footer">Prepared by Mohamed Taha — IT & Society Final Project</div>
+    <div class="footer">Prepared by — Mohamed Taha, Dre Miller, Tyler Thai, John Zhou</div>
   </main>
 </body>
 </html>
