--- a/how-it-works.html
+++ b/how-it-works.html
@@ -42,7 +42,7 @@
 
         <aside class="card">
           <h3>Illustration: system flow</h3>
-          <img src="images/bci-diagram.jpg" alt="BCI flow diagram">
+          <img src="bci-diagram.jpg" alt="BCI flow diagram">
           <p style="color:var(--muted); margin-top:10px;">From neural signal → decoder → confirmation → text or speech output. For patients, this means regained communication via thought alone.</p>
         </aside>
       </div>
