--- a/ethics.html
+++ b/ethics.html
@@ -30,7 +30,7 @@
 
         <aside class="card">
           <h3>Illustration</h3>
-          <img src="images/bci-ethics.jpg" alt="Ethics illustration">
+          <img src="bci-ethics.jpg" alt="Ethics illustration">
           <p style="color:var(--muted); margin-top:10px;">Ethical attention is required because misuse would be uniquely invasive.</p>
         </aside>
       </div>
