--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>BCI — What & Why</title>
+  <title>BCI Final Project — Home</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,7 +10,7 @@
     <div class="nav-inner container">
       <div class="brand">BCI — Restoring Communication</div>
       <div class="links">
-        <a href="index.html">Home</a>
+        <a class="active" href="index.html">Home</a>
         <a href="how-it-works.html">How it works</a>
         <a href="ethics.html">Risks & Ethics</a>
         <a href="recommendations.html">Recommendations</a>
@@ -21,34 +21,37 @@
   <main class="container">
     <section class="hero">
       <div class="left">
-        <h1>What is a Brain–Computer Interface (BCI) — and why it matters</h1>
-        <p>BCIs are systems that read neural activity and translate it into actions for a computer or device. They range from non-invasive headsets to implanted microelectrode arrays. We focus on using implanted BCIs to restore communication for people with severe paralysis because that application has immediate, measurable human benefit while also raising urgent ethical and safety questions.</p>
+        <h1>BCI to Restore Communication</h1>
+        <p>We study implanted Brain–Computer Interfaces (BCIs) used to restore communication for people with severe paralysis. These systems translate neural activity into text or synthesized speech, returning independence and enabling meaningful connection. Our focus is narrow and practical: medical BCIs for communication.</p>
         <div class="cta-row">
           <a class="btn" href="how-it-works.html">How it works</a>
-          <a class="btn" href="ethics.html">See risks & ethics</a>
+          <a class="btn" href="ethics.html">Risks & ethics</a>
         </div>
+        <p class="muted" style="margin-top:12px;">Team: Mohamed Taha, Dre Miller, Tyler Thai, John Zhou</p>
       </div>
+
       <div class="art">
-        <img src="bci-hero.jpg" alt="Neon brain illustration">
+        <img src="bci-hero.jpg" alt="Neon brain illustration" />
       </div>
     </section>
 
     <section class="section">
       <div class="grid-2">
         <div class="card">
-          <div class="kicker">Quick summary</div>
-          <h3 style="margin-top:8px;color:#eaf7ff;">Why this use case</h3>
-          <p>Restoring speech and communication to people who cannot speak returns autonomy, improves mental health, and enables decision-making. That makes it one of the highest-impact, ethically defensible uses of BCI technology when done safely and with respect for patients’ rights.</p>
+          <div class="kicker">Project scope</div>
+          <h3 style="margin-top:8px;color:#eaf7ff;">Why we focus on communication</h3>
+          <p class="muted">Restoring the ability to communicate has immediate patient impact. It is an ethically strong use case because it addresses fundamental autonomy: decisions, preferences, and relationships depend on communication.</p>
         </div>
 
         <aside class="card">
-          <h4 style="margin:0;color:var(--accent-2);">At a glance</h4>
-          <p style="color:var(--muted); margin-top:8px;">Focus: implanted BCIs for communication<br>Stakeholders: patients, hospitals, device makers, regulators<br>Ethical lenses: utilitarian + deontology</p>
+          <h4 style="margin:0;color:var(--accent-2);">Quick facts</h4>
+          <p class="muted" style="margin-top:8px;">Implant type: intracortical microelectrode arrays<br>Primary stakeholder: medical centers & clinicians<br>Ethical lenses: utilitarian & deontology</p>
         </aside>
       </div>
     </section>
 
-    <div class="footer">Prepared by — Mohamed Taha, Dre Miller, Tyler Thai, John Zhou</div>
+    <div class="footer">Prepared for: IT-304</div>
   </main>
 </body>
 </html>
+
