--- a/ethics.html
+++ b/ethics.html
@@ -2,56 +2,50 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>BCI — Risks & Ethics</title>
+  <title>BCI — Critical Discussion</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <nav class="topbar">
     <div class="nav-inner container">
-      <div class="brand">BCI — Restoring Communication</div>
+      <div class="brand">Brain–Computer Interfaces</div>
       <div class="links">
-        <a href="index.html">Home</a>
-        <a href="how-it-works.html">How it works</a>
-        <a href="ethics.html">Risks & Ethics</a>
+        <a href="index.html">Introduction</a>
+        <a href="how-it-works.html">Applications</a>
+        <a class="active" href="ethics.html">Critical Discussion</a>
         <a href="recommendations.html">Recommendations</a>
       </div>
     </div>
   </nav>
 
   <main class="container">
-    <section class="section">
-      <h2 style="margin-top:0; color:#eaf7ff;">Social implications and key risks</h2>
 
+    <section class="section">
       <div class="grid-2">
-        <div class="card">
-          <h3>Privacy & cognitive data</h3>
-          <p>Brain signals are deeply personal. Neural data could reveal intentions or preferences; without strict controls, it might be analyzed or shared in ways that violate a person’s mental privacy.</p>
+
+        <div>
+          <h2>Critical Discussion of BCIs</h2>
+
+          <p>BCIs have significant social implications because they change how humans interact with technology and potentially with each other. On the positive side, BCIs can increase independence and communication abilities for people with disabilities. However, they also raise political and social concerns, particularly regarding who controls neural data and how it might be used.</p>
+
+          <p>There are concerns about surveillance, manipulation, or commercial exploitation of neural information. In terms of risks, invasive BCIs involve surgical hazards, potential device failures, emotional stress for users, and the possibility of unintended actions caused by misinterpreted neural signals. These risks raise important questions about accountability, especially when a brain-controlled device produces an unintended output.</p>
+
+          <p>From a utilitarian perspective, BCIs are ethical when the benefits—such as restored communication, mobility, or independence—outweigh potential harms. This lens focuses on overall quality of life and the number of people who may benefit.</p>
+
+          <p>From a deontological perspective, the focus shifts to individual rights and moral duties. This approach emphasizes informed consent, autonomy, and strict protection of neural data. Even if BCIs help many people, violations of privacy or pressure to undergo implantation would be considered unethical.</p>
+
+          <p>These two ethical perspectives show that BCIs can be viewed either as powerful tools to improve well-being or as technologies that require strong boundaries to protect individual rights.</p>
         </div>
 
-        <aside class="card">
-          <h3>Illustration</h3>
-          <img src="bci-ethics.jpg" alt="Ethics illustration">
-          <p style="color:var(--muted); margin-top:10px;">Ethical attention is required because misuse would be uniquely invasive.</p>
-        </aside>
-      </div>
+        <div class="art">
+          <img src="bci-ethics.jpg" style="width:100%; height:auto; max-height:430px; object-fit:cover; border-radius:10px;">
+        </div>
 
-      <div class="card" style="margin-top:12px;">
-        <h3>Safety & long-term risks</h3>
-        <p>Implants involve surgery, potential infection, and long-term tissue responses that degrade signals. Device maintenance, firmware updates, and company support are ongoing concerns for patients.</p>
-      </div>
-
-      <div class="card" style="margin-top:12px;">
-        <h3>Equity & access</h3>
-        <p>If BCIs remain expensive and available only through elite centers, they could widen health disparities. Ethical deployment must include financing or access programs for those with medical need.</p>
-      </div>
-
-      <div class="card" style="margin-top:12px;">
-        <h3>Ethical lenses</h3>
-        <p><strong>Utilitarian:</strong> Supports BCI use when benefits (restored communication, improved wellbeing) clearly outweigh the harms, but demands risk reduction and equitable access. <br><strong>Deontology:</strong> Emphasizes respecting patient autonomy and privacy, requiring consent and strict limits on data use even if the technology creates wide benefits.</p>
       </div>
     </section>
 
-    <div class="footer"><a href="how-it-works.html" style="color:var(--muted);text-decoration:none">← Back</a></div>
   </main>
 </body>
 </html>
+
