--- a/recommendations.html
+++ b/recommendations.html
@@ -5,48 +5,44 @@
   <title>BCI — Recommendations</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <nav class="topbar">
     <div class="nav-inner container">
-      <div class="brand">BCI — Restoring Communication</div>
+      <div class="brand">Brain–Computer Interfaces</div>
       <div class="links">
-        <a href="index.html">Home</a>
-        <a href="how-it-works.html">How it works</a>
-        <a href="ethics.html">Risks & Ethics</a>
-        <a href="recommendations.html">Recommendations</a>
+        <a href="index.html">Introduction</a>
+        <a href="how-it-works.html">Applications</a>
+        <a href="ethics.html">Critical Discussion</a>
+        <a class="active" href="recommendations.html">Recommendations</a>
       </div>
     </div>
   </nav>
 
   <main class="container">
+
     <section class="section">
-      <h2 style="margin-top:0; color:#eaf7ff;">Actionable recommendations by stakeholder</h2>
+      <div class="grid-2">
 
-      <div class="card">
-        <h3>For medical institutions (primary stakeholder)</h3>
-        <p>1) Implement layered informed consent: pre-surgery, post-recovery re-consent, and ongoing consent for new data uses. 2) Add a confirmation/undo step for decoded outputs so users verify messages before they leave the device. 3) Maintain strong encrypted storage and limit retention of raw neural signals. 4) Provide long-term device support plans and psychological counseling for patients.</p>
-      </div>
+        <div>
+          <h2>Future Recommendations</h2>
 
-      <div class="card" style="margin-top:12px;">
-        <h3>For device companies</h3>
-        <p>Publish validation data, allow third-party audits of accuracy and bias, design fail-safe hardware, and adopt privacy-by-design (on-device processing where possible, minimal raw data exports).</p>
-      </div>
+          <p>To reduce the harmful impacts of BCIs, several steps can be taken. Technologically, improvements are needed in implant durability, surgical safety, and long-term signal reliability. Stronger safeguards for neural data should be implemented to protect users’ privacy and prevent unauthorized access.</p>
 
-      <div class="card" style="margin-top:12px;">
-        <h3>For policymakers</h3>
-        <p>Treat neural data as highly sensitive health data with explicit legal protections, require registries for implanted devices, mandate post-market surveillance, and fund equitable access programs.</p>
-      </div>
+          <p>Socially, there should be clear education for users and the public about what BCIs can realistically provide. Individuals adapting to implanted devices may require ongoing psychological support. Ensuring fair access is also important so that advances in BCI technology do not widen existing inequalities.</p>
 
-      <div class="card" style="margin-top:12px;">
-        <h3>For patients & families</h3>
-        <p>Ask for plain-language explanations, request data deletion options, get second opinions before implant surgery, and plan for long-term device maintenance and psychological support.</p>
+          <p>On a policy level, governments should treat neural data as highly sensitive information and create strict legal protections around its use. Regulations should require long-term safety monitoring for implanted devices and promote transparency when companies report side effects, errors, or device failures.</p>
+
+          <p>Together, these steps can help make BCIs safer, more ethical, and more beneficial to society as the technology continues to advance.</p>
+        </div>
+
+        <div class="art">
+          <img src="bci-clinic.jpg" style="width:100%; height:auto; max-height:430px; object-fit:cover; border-radius:10px;">
+        </div>
+
       </div>
     </section>
 
-    <div class="footer">
-      <img src="bci-clinic.jpg" alt="Clinical BCI image" style="max-width:260px;border-radius:10px;margin-bottom:8px;">
-      <div style="color:var(--muted);">Prepared by — Mohamed Taha, Dre Miller, Tyler Thai, John Zhou</div>
-    </div>
   </main>
 </body>
 </html>
