--- a/recommendations.html
+++ b/recommendations.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>BCI — Recommendations</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
   <nav class="topbar">
     <div class="nav-inner container">
@@ -20,28 +20,61 @@
   </nav>
 
   <main class="container">
-
+    <!-- Card 1: Technical & data safeguards (left) | Image (right) -->
     <section class="section">
       <div class="grid-2">
-
-        <div>
-          <h2>Future Recommendations</h2>
-
-          <p>To reduce the harmful impacts of BCIs, several steps can be taken. Technologically, improvements are needed in implant durability, surgical safety, and long-term signal reliability. Stronger safeguards for neural data should be implemented to protect users’ privacy and prevent unauthorized access.</p>
-
-          <p>Socially, there should be clear education for users and the public about what BCIs can realistically provide. Individuals adapting to implanted devices may require ongoing psychological support. Ensuring fair access is also important so that advances in BCI technology do not widen existing inequalities.</p>
-
-          <p>On a policy level, governments should treat neural data as highly sensitive information and create strict legal protections around its use. Regulations should require long-term safety monitoring for implanted devices and promote transparency when companies report side effects, errors, or device failures.</p>
-
-          <p>Together, these steps can help make BCIs safer, more ethical, and more beneficial to society as the technology continues to advance.</p>
+        <div class="card">
+          <h3>Technical recommendations</h3>
+          <ul>
+            <li>Improve implant durability and long-term signal reliability to reduce the need for repeated procedures.</li>
+            <li>Implement stronger safeguards for neural data storage and transmission to protect user privacy and prevent unauthorized access.</li>
+          </ul>
         </div>
 
         <div class="art">
-          <img src="bci-clinic.jpg" style="width:100%; height:auto; max-height:430px; object-fit:cover; border-radius:10px;">
+          <img src="bci-clinic.jpg" alt="Clinical BCI" style="width:100%; height:auto; border-radius:10px;">
         </div>
-
       </div>
     </section>
+
+    <!-- Card 2: Social recommendations (left) | Image (right) -->
+    <section class="section" style="margin-top:18px;">
+      <div class="grid-2">
+        <div class="card">
+          <h3>Social recommendations</h3>
+          <ul>
+            <li>Provide clear, realistic education for users and the public about BCI capabilities and limits.</li>
+            <li>Offer psychological support for individuals adapting to implanted systems and plan for long-term device maintenance.</li>
+            <li>Promote fair access measures to prevent advances from widening existing inequalities.</li>
+          </ul>
+        </div>
+
+        <div class="art">
+          <img src="bci-clinic.jpg" alt="" style="width:100%; height:auto; border-radius:10px;">
+        </div>
+      </div>
+    </section>
+
+    <!-- Card 3: Policy recommendations (left) | Image (right) -->
+    <section class="section" style="margin-top:18px;">
+      <div class="grid-2">
+        <div class="card">
+          <h3>Policy recommendations</h3>
+          <ul>
+            <li>Treat neural data as highly sensitive and establish strict legal protections around its collection and secondary use.</li>
+            <li>Require long-term safety monitoring for implanted devices and mandate transparency when companies report failures or side effects.</li>
+          </ul>
+        </div>
+
+        <div class="art">
+          <img src="bci-clinic.jpg" alt="" style="width:100%; height:auto; border-radius:10px;">
+        </div>
+      </div>
+    </section>
+
+  </main>
+</body>
+</html>
 
   </main>
 </body>
