--- a/ethics.html
+++ b/ethics.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>BCI — Critical Discussion</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
   <nav class="topbar">
     <div class="nav-inner container">
@@ -20,32 +20,61 @@
   </nav>
 
   <main class="container">
-
+    <!-- Card 1: Social implications (left) | Image (right) -->
     <section class="section">
       <div class="grid-2">
-
-        <div>
-          <h2>Critical Discussion of BCIs</h2>
-
-          <p>BCIs have significant social implications because they change how humans interact with technology and potentially with each other. On the positive side, BCIs can increase independence and communication abilities for people with disabilities. However, they also raise political and social concerns, particularly regarding who controls neural data and how it might be used.</p>
-
-          <p>There are concerns about surveillance, manipulation, or commercial exploitation of neural information. In terms of risks, invasive BCIs involve surgical hazards, potential device failures, emotional stress for users, and the possibility of unintended actions caused by misinterpreted neural signals. These risks raise important questions about accountability, especially when a brain-controlled device produces an unintended output.</p>
-
-          <p>From a utilitarian perspective, BCIs are ethical when the benefits—such as restored communication, mobility, or independence—outweigh potential harms. This lens focuses on overall quality of life and the number of people who may benefit.</p>
-
-          <p>From a deontological perspective, the focus shifts to individual rights and moral duties. This approach emphasizes informed consent, autonomy, and strict protection of neural data. Even if BCIs help many people, violations of privacy or pressure to undergo implantation would be considered unethical.</p>
-
-          <p>These two ethical perspectives show that BCIs can be viewed either as powerful tools to improve well-being or as technologies that require strong boundaries to protect individual rights.</p>
+        <div class="card">
+          <h3>Social implications</h3>
+          <ul>
+            <li>BCIs change how people interact with technology and each other, offering independence and improved communication for some users.</li>
+            <li>They also raise questions about who controls neural data and how that data might be used, including concerns about surveillance or commercial exploitation.</li>
+          </ul>
         </div>
 
         <div class="art">
-          <img src="bci-ethics.jpg" style="width:100%; height:auto; max-height:430px; object-fit:cover; border-radius:10px;">
+          <img src="bci-ethics.jpg" alt="Ethics illustration" style="width:100%; height:auto; border-radius:10px;">
+        </div>
+      </div>
+    </section>
+
+    <!-- Card 2: Risks & accountability (left) | Image (right) -->
+    <section class="section" style="margin-top:18px;">
+      <div class="grid-2">
+        <div class="card">
+          <h3>Risks and accountability</h3>
+          <ul>
+            <li>Invasive BCIs involve surgical hazards, potential device failures, emotional stress for users, and the possibility of unintended outputs from misinterpreted neural signals.</li>
+            <li>These issues raise accountability questions about whether responsibility lies with users, clinicians, or device developers when devices behave unexpectedly.</li>
+          </ul>
         </div>
 
+        <div class="art">
+          <img src="bci-ethics.jpg" alt="" style="width:100%; height:auto; border-radius:10px;">
+        </div>
+      </div>
+    </section>
+
+    <!-- Card 3: Ethical lenses (left) | Image (right) -->
+    <section class="section" style="margin-top:18px;">
+      <div class="grid-2">
+        <div class="card">
+          <h3>Ethical lenses</h3>
+          <ul>
+            <li><strong>Utilitarian:</strong> BCIs are ethical when benefits like restored communication and improved wellbeing outweigh harms, focusing on population-level outcomes.</li>
+            <li><strong>Deontological:</strong> Emphasizes individual rights and duties, requiring informed consent, privacy protections, and limits on coercive use regardless of aggregate benefits.</li>
+          </ul>
+        </div>
+
+        <div class="art">
+          <img src="bci-ethics.jpg" alt="" style="width:100%; height:auto; border-radius:10px;">
+        </div>
       </div>
     </section>
 
   </main>
+</body>
+</html>
+
 </body>
 </html>
 
